deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rbp-tar-svc
spec:
  type: ClusterIP
  ports:
  - name: default                                                 
    port: 80     
    protocol: TCP                                                               
    targetPort: 5000    
  selector:
    app: rbp-tar
