deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbp-tar-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - rbp-tar.ncbr.dyn.cloud.e-infra.cz
    secretName: rpb-tar-ncbr-dyn-cloud-e-infra-cz
  rules:
  - host: rbp-tar.ncbr.dyn.cloud.e-infra.cz
    http:
      paths:
        - pathType: ImplementationSpecific
          path: "/"
          backend:
            service:
              name: rbp-tar-svc
              port: 
                name: default
